fix: add more padding bottom on mobile

--- a/components/login/LoginLayout/LoginLayout.module.scss
+++ b/components/login/LoginLayout/LoginLayout.module.scss
@@ -87,7 +87,7 @@
 
   @media (max-width: media.$tablet) {
     width: 100%;
-    padding: 32px;
+    padding: 32px 32px 72px;
     flex: 1;
   }
 
